NEW 250657
`text-combine-upright: all` & `text-transform` don't work together
https://bugs.webkit.org/show_bug.cgi?id=250657
Summary `text-combine-upright: all` & `text-transform` don't work together
Ahmad Saleem
Reported 2023-01-15 16:05:50 PST
Hi Team, While going through Blink's commit, I came across another failing test case compared to Chrome Canary 111 and Firefox Nightly 110. Failing Test Case - https://jsfiddle.net/es32cpu4/ ^ where it should be uppercase, it isn't and same is in case of upright. Blink Commit - https://chromium.googlesource.com/chromium/blink/+/8adabd82d989811df5dd94bb211a30eb7c2b0a9c I don't know whether 1-1 merge is possible or not but it is good to track this. Thanks!
Attachments
Tim Nguyen (:ntim)
Comment 1 2023-01-16 13:02:51 PST
Seems like a good change to make, to match Chrome & FF with `text-combine-upright: all;`
Ahmad Saleem
Comment 2 2023-01-17 15:29:30 PST
Based on following comment from Alan: https://github.com/WebKit/WebKit/pull/8703#discussion_r1072574376 Blink's patch is not working properly and also this is subject to refactoring soonish. I am going to close my PR: https://github.com/WebKit/WebKit/pull/8703 and leave it as open for tracking purposes. Thanks!
Radar WebKit Bug Importer
Comment 3 2023-01-22 16:06:17 PST
Note You need to log in before you can comment on or make changes to this bug.