`text-combine-upright: all` & `text-transform` don't work together

`text-combine-upright: all` & `text-transform` don't work together
https://bugs.webkit.org/show_bug.cgi?id=250657

Reviewed by NOBODY (OOPS!).

This patch is to align WebKit with Gecko / Firefox and Blink / Chromium.

Merge - https://src.chromium.org/viewvc/blink?view=rev&revision=167624

When we transform text, we set transformed text to
RenderText::m_text. RenderCombineText overwrites the text at
combineText() and use originalText() at combineTextIfNeeded() in
painting. Therefore, text combine paints original text instead of
transformed text.

* Source/WebCore/rendering/RenderCombineText.h: Add "m_renderedText" as String definition
* Source/WebCore/rendering/RenderCombineText.cpp:
(RenderCombineText::combineTextIfNeeded): Change 'originalText' to "m_renderedText" and call it also while object replacement
* LayoutTests/fast/text/text-combine-upright-text-transform.html: Add Test Case
* LayoutTests/fast/text/text-combine-upright-text-transform-expected.html: Add Test Case Expectation